--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no">
         <title>Demo演示</title>
         <link rel="stylesheet" href="src/css/reset.css">
+        <link rel="shortcut icon" href="src/img/bitbug_favicon.ico">
         <style>
             html,body{
                 width: 100%;
