调整布局，跳转方式

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
                                 var div = document.createElement('div');
                                 str = '<div class="demo-item">'
-                                    +    '<a href="'+data[i].url+'">'
+                                    +    '<a href="'+data[i].url+'" target="_blank">'
                                     +        '<img src="'+data[i].img+'" alt="">'
                                     +        '<h2>'+data[i].name+'</h2>'
                                     +        '<p>'+data[i].tech+'</p>'
