--- a/src/html/regtool.html
+++ b/src/html/regtool.html
@@ -185,6 +185,11 @@
                       <option value ="g">g</option>
                       <option value ="i">i</option>
                       <option value="m">m</option>
+                      <option value ="gi">gi</option>
+                      <option value="gm">gm</option>
+                      <option value="im">im</option>
+                      <option value ="gmi">gmi</option>
+
                     </select>
                 </div>
 
