--- a/src/html/color-tochange.html
+++ b/src/html/color-tochange.html
@@ -95,6 +95,7 @@
                     height: 20px;
                     line-height: 20px;
                     margin-top: 20px;
+                    text-align: center;
                 }
                 .box,.box2{
                     width: 100%;
