--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <div class="header">
                 <span>DEMO展示</span>
-                <a href="https://biyuqi.github.io/" target="_blank"><img src="src/img/timg.png" alt=""></a>
+                <a href="http://loadingmore.com/" target="_blank"><img src="src/img/timg.png" alt=""></a>
             </div>
             <div class="main-demo clearfix">
                 <ul class="box"></ul>
