--- a/src/html/deleteModal.html
+++ b/src/html/deleteModal.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>美化删除操作之回调</title>
         <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no">
-        <link rel="stylesheet" href="../css/SuperModalLayer.css">
+        <link rel="stylesheet" href="../css/superModalLayer.css">
         <style>
             *{
                 margin: 0;
@@ -79,7 +79,7 @@
         <div class="reload">
             刷新页面
         </div>
-        <script src="../lib/SuperModalLayer.js"></script>
+        <script src="../lib/superModalLayer.js"></script>
         <script>
             (function(){
                 //移动端太多浏览器不支持forEach
