--- a/src/html/mobile-modal.html
+++ b/src/html/mobile-modal.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>移动端模态框提示性插件</title>
         <meta name="viewport" content="initial-scale=1,maximum-scale=3,minimum-scale=1,user-scalable=no">
-        <link rel="stylesheet" href="../css/superModalLayer.css">
+        <link rel="stylesheet" href="../css/SuperModalLayer.css">
         <style>
             *{
                 margin: 0;
@@ -62,7 +62,7 @@
                 <img src="../img/timg.png" alt="我的gihub地址">
             </a>
         </div>
-        <script src="../lib/superModalLayer.js"></script>
+        <script src="../lib/SuperModalLayer.js"></script>
         <script>
             function $$(el){
                 return document.querySelector(el)
