--- a/src/html/pull/pull.html
+++ b/src/html/pull/pull.html
@@ -58,6 +58,7 @@
                 </div> -->
             </div>
         </div>
+        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
         <script src="pull.js"></script>
     </body>
 </html>
