暂未解决首次加载图片高度获取不到

--- a/src/html/pull/pull.html
+++ b/src/html/pull/pull.html
@@ -50,15 +50,8 @@
     </head>
     <body>
         <div class="container">
-            <div class="view clearfix">
-                <!-- <div class="box">
-                    <div class="box-cell">
-                        <img src="img/8.jpg" alt="">
-                    </div>
-                </div> -->
-            </div>
+            <div class="view clearfix"></div>
         </div>
-        <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
         <script src="pull.js"></script>
     </body>
 </html>
