--- a/src/html/pull/pull.html
+++ b/src/html/pull/pull.html
@@ -44,7 +44,8 @@
             }
             .box img{
                 width: 100%;
-                height: 100%;
+                display: block;
+                /*height: 100%;*/
             }
         </style>
     </head>
