--- a/src/html/pull/pull.html
+++ b/src/html/pull/pull.html
@@ -53,6 +53,7 @@
         <div class="container">
             <div class="view clearfix"></div>
         </div>
+        <script src="leren.js"></script>
         <script src="pull.js"></script>
     </body>
 </html>
