--- a/index.html
+++ b/index.html
@@ -58,5 +58,15 @@
                 })
             })()
         </script>
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+                var hm = document.createElement("script");
+                hm.src = "https://hm.baidu.com/hm.js?d259c948da09d582a34230d0524286ae";
+                var s = document.getElementsByTagName("script")[0];
+                s.parentNode.insertBefore(hm, s);
+            })();
+        </script>
+
     </body>
 </html>
